--- a/references.bib
+++ b/references.bib
@@ -101,6 +101,24 @@
   publisher={Wiley Online Library}
 }
 
+@article{hou2023sharing,
+  title={``Sharing Is Caring'': Participatory Storytelling and Community Building on Social Media Amidst the COVID-19 Pandemic},
+  author={Hou, Jenny Zhengye},
+  journal={American Behavioral Scientist},
+  pages={00027642231164040},
+  year={2023},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{podkalicka2010understanding,
+  title={Understanding digital storytelling: individual ‘voice’and community-building in youth media programs},
+  author={Podkalicka, Aneta and Campbell, Craig},
+  booktitle={Seminar. net},
+  volume={6},
+  number={2},
+  year={2010}
+}
+
 @book{putnam2000bowling,
   title={Bowling alone: The collapse and revival of American community},
   author={Putnam, Robert D},
